@@ -1,19 +1,18 @@
 # Redact - A simple log wiping program
 
-Redact is a simple Unix/Linux program to remove a user's activity from
-the common system log files. This program is different than other log
+Redact is a simple Linux program to remove a user's activity from
+common system log files. This program is different than other log
 wipers currently available in that it avoids common pitfalls when
 destroying log entries. Some wipe programs simply overwrite the matching
 log entries with zeros. However, there are programs that check the integrity
 of the system's log files by searching for these NUL entries and alert
-the administrator when found. Besides it just looks plain suspicious if
-the log files are examined with a more low level tool. NUL log entries are
-avoided by creating a new log file and entirely omitting specific entries
-which leaves no trace that the log files have been tampered with. The same
-permissions and user/group owners are applied to the new log file to avoid
-incorrect permissions or owners. Finally, the old log file is replaced with
-the newly sanitized one. Below is a list of the common Linux log files that
-this program currently is able to sanitize.
+the administrator when found. NUL log entries are avoided by creating a new 
+log file and entirely omitting specific entries which leaves no trace that 
+the log files have been tampered with. The same permissions and user/group 
+owners are applied to the new log file to avoid incorrect permissions or 
+owners. Finally, the old log file is replaced with the newly sanitized one.
+Below is a list of the common Linux log files that this program currently
+supports. 
 
 **Common log file location - Description**
 
@@ -51,15 +50,16 @@ Get a copy of the source code and change into the redact directory.
     cd redact
 
 Then set the location of the relevant log files by editing the defines
-at the top of the redact.c file which is located in the src directory.
-If a defined log file is missing, point it at a blank regular text file
-you created somewhere. The default definitions should work for most
-Linux distributions, but some may need to be changed. Use your favorite
-text editor to do so.
+at the top of the redact.c file (WTMPFILE, UTMPFILE, etc.) which is 
+located in the src directory. If a defined log file is missing, either 
+point it at a blank regular text file you created somewhere or leave it 
+as the default and ignore the error messages about failure to open the 
+file. The default definitions should work for most Linux distributions, 
+but some may need to be changed. Use your favorite text editor to do so.
 
     vim ./src/redact.c
 
-Run make to build the program
+From the redact directory, run make to build the program
 
     make
 
@@ -72,11 +72,17 @@ pertaining to the user named john
 
     ./redact -w john
 
+When finished, run the following command to delete the compiled program 
+and any intermediary object files
+
+    make remove
+
 
 **Installing**
 
-There is not install target in the Makefile to install the binary on a system.
+There is no install target in the Makefile to install the binary on a system.
 This is intentional.
+
 
 **To Do**
 
@@ -84,10 +90,17 @@ This is intentional.
 - [ ] Support UNIX operating systems (BSD, ...) in addition to Linux
 
 
+**Contributing**
+
+Pull requests, new feature suggestions, and bug reports/issues are 
+welcome.
+
+
 **Versioning**
 
 This project uses semantic versioning 2.0. Version numbers follow the
 MAJOR.MINOR.PATCH format.
+
 
 **License**
 
@@ -95,3 +108,4 @@ This project is licensed under the 3-Clause BSD License also known as the
 *"New BSD License"* or the *"Modified BSD License"*. A copy of the license
 can be found in the LICENSE file. A copy can also be found at the
 [Open Source Institute](https://opensource.org/licenses/BSD-3-Clause)
+
